--- a/.docker/.env.example
+++ b/.docker/.env.example
@@ -54,3 +54,6 @@ MONGO_PORT=27017
 ################################################
 # Internal `Payment Service` Ports
 PAYMENT_PORT=5000
+
+
+DOC_PORT=5100
