--- a/.docker/.env.example
+++ b/.docker/.env.example
@@ -14,6 +14,7 @@ CONTAINER_HOST=0.0.0.0
 # build versions
 PYTHON_VERSION=latest
 MONGO_VERSION=latest
+ALPINE_VERSION=latest
 
 ################################################
 ##                                            ##
