--- a/.docker/.env.example
+++ b/.docker/.env.example
@@ -34,8 +34,8 @@ ALPINE_VERSION=latest
 ##           - DEBUG = False                  ##
 ##                                            ##
 ################################################
-ENV=dev
-TESTING=False
+ENV=test
+TESTING=True
 DEBUG=True
 
 
@@ -56,5 +56,12 @@ MONGO_PORT=27017
 # Internal `Payment Service` Ports
 PAYMENT_PORT=5000
 
+DB_NAME=payment_db
+DB_HOST=mongo
+DB_PORT=27017
 
+DB_ROOT_USERNAME=payment_root_user
+DB_ROOT_PASSWORD=payment_root_password
+
+# DOC
 DOC_PORT=5100
