--- a/.env.example
+++ b/.env.example
@@ -2,13 +2,20 @@ ENV=dev
 
 SECRET_KEY=b'\xacP=\x12\xa6\xa2\x19`\xbcu{\x0b\xe4&H\x8d'
 
-HOST=0.0.0.0
-PORT=5000
-
-FLASK_APP=payment 
-FLASK_ENV=development 
+# flask dev envs
+FLASK_APP=payment
+FLASK_ENV=development
 FLASK_SKIP_DOTENV=1
-
+FLASK_RUN_HOST=0.0.0.0
+# for docker setup refer to .docker/.env.example
+FLASK_RUN_PORT=5000
 
 LOGGING_HOST=logstash
 LOGGING_PORT=5600
+
+MONGODB_DB=payment_db
+# for docker setup refer to .docker/.env.example
+MONGODB_HOST=0.0.0.0
+MONGODB_PORT=27017
+MONGODB_USERNAME=payment_user
+MONGODB_PASSWORD=payment_password
