--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -11,7 +11,7 @@ repos:
     hooks:
     -   id: tests
         name: run tests
-        entry: pytest --flake8
+        entry: pytest
         language: python
         types: [python]
         pass_filenames: false
