--- a/.travis.yml
+++ b/.travis.yml
@@ -5,17 +5,22 @@ language: python
 python:
   - 3.7
 
-env:
-  - GH_TOKEN=cb13003e5e786746bddbec4f6dc1f247af5ecaa4
+services:
+  - mongodb
 
 install:
-  - pip install tox-travis
+  #- pip install tox-travis
+  - pip install -r requirements-dev.txt
 
-script: 
-  - tox
+before_script:
+  - cp .env.example .env
+  - sleep 15
+  - mongo payment_db --eval 'db.createUser({user:"payment_user",pwd:"payment_password",roles:["readWrite"]});'
+
+script:
+  - pytest
 
 after_success:
-- git config --global user.name "Simonbelete"
-- git config --global user.email "simonbelete@gmail.com"
-- pip install python-semantic-release
-- semantic-release publish
+  - git config --global user.name "Simonbelete"
+  - git config --global user.email "simonbelete@gmail.com"
+  - semantic-release publish
