--- a/requirements.txt
+++ b/requirements.txt
@@ -9,4 +9,5 @@ flask-restplus
 werkzeug~=0.16.1
 flask-mongoengine
 python-semantic-release
+schedule
 git+git://github.com/Guya-LTD/python-logstash.git#egg=python-logstash
